# cs-575

./: README.md  barabasi_albert_homework.ipynb  pyproject.toml
notebooks/: Homophily.ipynb  core_periphery_tutorial.ipynb  girvan_newman_edge_betweenness.ipynb  girvan_newman_partitions_homework.ipynb  graph_laplacian_tutorial.ipynb  graphlets_application_tutorial.ipynb  graphlets_definition_tutorial.ipynb  graphlets_tutorial.ipynb  hill_climbing_fall_2025.ipynb  kernighan-lin_hill_climbing_graph_cut.ipynb  louvain_practice.ipynb  spectral_graph_cut.ipynb  spectral_modularity_cut.ipynb  stochastic_block_model_tutorial.ipynb  two_truths_tutorial.ipynb
notebooks/graph_data_science/: GCN_overview.ipynb  GCN_semi_supervised_learning.ipynb  Graph_autoencoders.ipynb  deep_walk_in_class_example.ipynb  movies_knowledge_graph_tutorial.ipynb  node2vec_tutorial.ipynb  structural_equivalence_random_walks.ipynb
notebooks/homework/: comparing_GNNs_homework.ipynb  homework_0_tutorial.ipynb  partitioning_homework.ipynb
project1/: agent.py  pyproject.toml  spread.ipynb
project2/: agent.py  pyproject.toml  spread.ipynb  spread_executed.ipynb
project3/: agent.py  spread.ipynb
src/: Girvan_Newman_stochastic_block_network.py  dendrogram_handler.py  drawing_utilities.py  graphlet_utilities.py  partitioning_utilities.py  plotting_utilities.py  plotting_utilities_for_movie_database.py
tests/test_graph_construction/: test_vertex_edge_sets.py
tests/test_graphlets_utilities/: test_grid_calculations.py  test_subgraph_finding.py
tests/test_homework_1/: test_hw1_problem_10.py  (+6 more)
(+13 files in other folders)
