[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
